tests/pp-fail/bad_elif2.fl.0.exp
Error: bad_elif2.fl(3,1): Unexpected \elif directive 
\if true
\else
\elif true
^          
\endif

