tests/pp-fail/bad_elif2.fl
\if true
\else
\elif true
\endif
